--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -19,5 +19,6 @@
             <p>&copy; 2025 Neptune's Kitchen. All rights reserved.</p>
         </footer>
     </div>
+<script src="/static/js/{{.Title}}.js"></script>
 </body>
 </html>
