--- a/web/static/css/layout.css
+++ b/web/static/css/layout.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Metamorphous';
+    src: url('../fonts/Metamorphous-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -11,10 +18,44 @@ html, body {
 }
 
 .header {
-    background-color: black;
-    color: white;
+    background-color: #021945 !important;
+    color: #98FF98;
     padding: 20px;
-    text-align: center;
+    font-family: 'Metamorphous', serif;
+    font-size: 2rem !important;
+    display: flex;
+    align-items: center;
+}
+
+#logo{
+    height: 4rem !important;
+    margin-right: 1rem;
+}
+
+#icons {
+    margin-bottom: 0 !important;
+    margin-top: 0;
+}
+i {
+    font-size: 1.5rem !important;
+    margin-bottom: 0.5rem;
+}
+
+#logout {
+    
+    margin-bottom: 0;
+    width: 10px;
+    color: #021945;
+}
+
+.ms-3 {
+    position: absolute;
+    right: 2rem;
+}
+.loggingout {
+    width: auto;
+    background-color: #98FF98;
+    border-color: #98FF98;
 }
 
 .content {
