--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,12 +1,17 @@
 {{define "content"}}
-    <p>Hello, Welcome to Neptune's Kitchen
-        <br>
-        This is the Home Page.
-        <br>
-        To go to Login or Signup pages - Either click the button, or make a GET request on:
-        <br>
-        /login  - Login Page <br>/signup - Signup Page
-    </p>
-    <button><a type="button" href="/login">Login</a></button>
-    <button><a type="button" href="/signup">Sign Up</a></button>
+    <div id="wrapper">
+        <div id="cover">
+            <div id="introduction">Welcome to <b>Neptune's Kitchen</b>— where flavors from across the world come alive!
+                From sizzling North Indian curries to comforting South Indian staples, zesty Mexican tacos to classic Italian pastas — we serve a handpicked menu crafted for every craving.
+                <br>Top it off with our decadent global desserts and signature beverages. One kitchen, many cultures — all delicious.
+                <br><br><br>Been here before? Hit <b>Login</b> and let's pick up where we left off!
+                <br>First time here? Click <b>Sign Up</b> — we're excited to serve you something amazing!
+            </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <a class="btn btn-primary" type="button" href="/login">Login</a>
+                <a class="btn btn-primary" type="button" href="/signup">Sign Up</a>
+            </div>
+
+        </div>
+    </div>
 {{end}}
