--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-...your-integrity-key..." crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <meta charset="UTF-8">
-     <title>{{.Title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/layout.css">
     <link rel="stylesheet" href="/static/css/{{.Title}}.css">
+    <title>{{.Title}}</title>
 </head>
 <body>
     <div class="page-container">
         <header class="header">
-            <h1>Neptune's Kitchen</h1>
+            <img src="static/images/trident.svg" id="logo">
+            <h1 class="mt-2">Neptune's Kitchen</h1>
+            <form action="/logout" method="GET" class="ms-3">
+                <button class="btn btn-outline-danger btn-sm d-flex align-items-center loggingout">
+                    <i class="fas fa-sign-out-alt me-2" id="logout"></i>
+                </button>
+            </form>
         </header>
 
         <main class="content">
