--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,40 +1,38 @@
 {{define "content"}}
-    <p>Hello, Welcome to Neptune's Kitchen
-        <br>
-        This is the Login Page.
-        <form action="/login" method="POST" style="max-width: 400px;">
-            <h3><b>LOGIN</b></h3>
-            <div>
-                <label>Login with:</label>
-                <div >
-                    <input type="radio" name="login_type" id="mobile_option" value="mobile" checked>
-                    <label for="mobile_option">Mobile Number</label>
+<div id="wrapper">
+    <div id="cover">
+        <form action="/login" method="POST" class="container mt-5" style="max-width: 400px;">
+            <h3 class="text-center mb-4"><b>LOGIN</b></h3>
+            <div class="mb-3">
+                <label class="form-label d-block">Login with:</label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="login_type" id="mobile_option" value="mobile" checked>
+                    <label class="form-check-label" for="mobile_option">Mobile Number</label>
                 </div>
-                <div>
-                    <input type="radio" name="login_type" id="email_option" value="email">
-                    <label for="email_option">Email ID</label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="login_type" id="email_option" value="email">
+                    <label class="form-check-label" for="email_option">Email ID</label>
                 </div>
             </div>
-            <div>
-                <label for="identifier" >Mobile Number or Email</label>
-                <input type="text"  id="identifier" name="identifier" required>
+            <div class="mb-3">
+                <label for="identifier" class="form-label">Mobile Number or Email</label>
+                <input type="text" class="form-control" id="identifier" name="identifier" required>
             </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <div>
-                <input type="checkbox" id="show_password">
-                <label for="show_password">Show Password</label>
+            <div class="form-check mb-3">
+                <input type="checkbox" class="form-check-input" id="show_password">
+                <label class="form-check-label" for="show_password">Show Password</label>
             </div>
-            <div>
-                <button type="submit">Login</button>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Login</button>
             </div>
-        </form>
-        <form action="/reset" method="GET">
-            <button type="submit">Forgot Password?</button>
         </form>
         <form action="/signup" method="GET">
-            <button type="submit">First time here? Sign Up!</button>
+            <button class="btn btn-outline-success redirect" type="submit">First time here? Sign Up!</button>
         </form>
+    </div>
+</div>
 {{end}}
