--- a/web/templates/add_dish.html
+++ b/web/templates/add_dish.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 <div id="cover">
-    <div class="container mt-5 pt-5">
+    <div class="container pt-2">
         <div class="bg-white p-4 rounded shadow-sm" style="max-width: 700px; margin: auto;">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h3 class="text-center mb-4">Add New Dish</h3>
