--- a/web/templates/admin.html
+++ b/web/templates/admin.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="container mt-5 pt-5 mb-5">
+<div class="container pt-5 mb-5">
         <div class="d-flex flex-wrap" id="top_buttons">
             <form action="/menu" method="GET" class="me-3 mb-3">
                 <button id="view_menu" class="btn btn-primary">View Menu</button>
@@ -28,16 +28,41 @@
                         <th>User ID</th>
                         <th>Order Type</th>
                         <th>Table No.</th>
+                        <th>Bill</th>
                     </tr>
                 </thead>
                 <tbody id="orders_table_body">
                     {{range .Orders}}
-                        <tr>
-                            <td>{{.Status}}</td>
+                        <tr data-status="{{.Status}}">
+                            <td>
+                                {{if eq .Status "preparing"}}
+                                    Preparing
+                                {{else if eq .Status "payment_pending"}}
+                                    Payment Pending
+                                {{else if eq .Status "completed"}}
+                                    Completed
+                                {{end}}
+                            </td>
                             <td>{{.OrderId}}</td>
                             <td>{{.UserId}}</td>
-                            <td>{{.Order_type}}</td>
-                            <td>{{.Table_number}}</td>
+                            <td>
+                                {{if eq .Order_type "takeaway"}}
+                                    Takeaway
+                                {{else}}
+                                    Dine In
+                                {{end}}
+                            </td>
+                            <td>{{if eq .Order_type "takeaway"}}
+                                    -
+                                {{else}}
+                                    {{.Table_number}}
+                                {{end}}
+                            </td>
+                            <td>
+                                <form id="get_bill" action="/bill/preparing/{{.OrderId}}" method="GET" target="_blank">
+                                    <button type="submit" class="btn btn-info btn-sm">Get Bill</button>
+                                </form>
+                            </td>
                         </tr>
                     {{end}}
                 </tbody>
@@ -62,7 +87,7 @@
                 </thead>
                 <tbody id="items_table_body">
                     {{range .Items}}
-                        <tr>
+                        <tr data-chef_id="{{.ChefId}}">
                             <td>{{.ItemName}}</td>
                             <td>{{.Quantity}}</td>
                             <td>{{.OrderId}}</td>
