--- a/web/static/css/Menu.css
+++ b/web/static/css/Menu.css
@@ -94,7 +94,7 @@
 #cart-list {
     list-style-type: none;
     padding: 0;
-    max-width: 300px;
+    max-width: 20rem;
     margin: 0;
     background-color: #f9f9f9;
 }
