--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img src="static/images/trident.svg" id="logo">
             <h1 class="mt-2">Neptune's Kitchen</h1>
-            <form action="/logout" method="GET" class="ms-3">
+            <form action="/logout" method="POST" class="ms-3">
                 <button class="btn btn-outline-danger btn-sm d-flex align-items-center loggingout">
                     <i class="fas fa-sign-out-alt me-2" id="logout"></i>
                 </button>
