--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -35,4 +35,17 @@
         </form>
     </div>
 </div>
+
+{{if eq .Error "True"}}
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999;">
+        <div class="toast custom-toast show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body">
+                    {{.Message}}
+                </div>
+                <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+{{end}}
 {{end}}
