--- a/web/templates/add_dish.html
+++ b/web/templates/add_dish.html
@@ -2,7 +2,7 @@
 <div id="cover">
     <div class="container pt-2">
         <div class="bg-white p-4 rounded shadow-sm" style="max-width: 700px; margin: auto;">
-            <div class="d-flex justify-content-between align-items-center mb-4">
+            <div class="d-flex justify-content-between align-items-center mb-4 title">
                 <h3 class="text-center mb-4">Add New Dish</h3>
                 <form action="/admin" method="GET">
                     <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-user-tie" title="Admin Page"></i></button>
@@ -65,4 +65,17 @@
         </div>
     </div>
 </div>
+{{if .Error}}
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999;">
+    <div class="toast custom-toast show" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                {{.Message}}
+            </div>
+            <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+</div>
+{{end}}
+
 {{end}}
